infra/terraform/aws/networking.tf

resource "aws_vpc" "main" {
    cidr_block = "10.0.0.0/16"
    enable_dns_support   = true
    enable_dns_hostnames = true

    tags = {
        Name = "jobseeker-vpc"
    }
}

resource "aws_subnet" "public" {
    vpc_id                      = aws_vpc.main.id
    cidr_block                  = "10.0.1.0/24"
    availability_zone           = "ap-south-1a"
    map_public_ip_on_launch     = true

    tags = {
        Name = "jobseeker-public-subnet"
    }
}

resource "aws_internet_gateway" "main" {
    vpc_id = aws_vpc.main.id

    tags = {
        Name = "jobseeker-igw"
    }
}

resource "aws_route_table" "public" {
    vpc_id = aws_vpc.main.id

    route{
        cidr_block = "0.0.0.0/0"
        gateway_id = aws_internet_gateway.main.id
    }

    tags = {
        Name = "jobseeker-public-rt"
    }
}

resource "aws_route_table_association" "public" {
    subnet_id               = aws_subnet.public.id
    route_table_id          = aws_route_table.public.id
}

resource "aws_eip" "jobseeker" {
  domain = "vpc"

  tags = {
    Name = "jobseeker-eip"
  }
}

resource "aws_eip_association" "jobseeker" {
  instance_id   = aws_instance.jobseeker.id
  allocation_id = aws_eip.jobseeker.id
}
